--- a/index.html
+++ b/index.html
@@ -1,218 +1,12 @@
-<canvas></canvas>
-<div></div>
-<script>
-  window.onload = drawboard;
-
-  board =
-    "         \n"+
-    "         \n"+
-    " rnbqkbnr\n"+
-    " pppppppp\n"+
-    " ........\n"+
-    " ........\n"+
-    " ........\n"+
-    " ........\n"+
-    " PPPPPPPP\n"+
-    " RNBQKBNR\n"+
-    "         \n"+
-    "         \n";
-
-  dir =
-    {
-	P : [-10, -20, -11, -9],
-	N : [21, 19, 12, 8, -21, -19, -12, -8],
-	B : [11, 9, -11, -9],
-	R : [10, 1, -10, -1],
-	Q : [11, 9, -11, -9, 10, 1, -10, -1],
-	K : [11, 9, -11, -9, 10, 1, -10, -1],
-    };
-
-  value = {"." : 0, p : 100, n : 300, b : 330, r : 500, q : 900, k : 10000};
-  post = [];
-  for (let i = 2; i < 10; i++) {
-      for (let j = 1; j < 10; j++) {
-	  post[10 * i + j] = (i - 6) ** 2 + (j - 4.5) ** 2;
-      }
-  }
-
-  score = 0;
-
-  table = new Map(); // transposition table
-  TABLE_SIZE = 1e7;
-
-  SEARCH_TIME = 500; // milliseconds
-
-  function gen() {
-      let moves = [];
-      for (let i = 21; i < 99; i++) {
-	  let p = board[i];
-	  if ("A" < p && p < "a") {
-	      let r = dir[p];
-	      for (let k = 0; k < r.length; k++) {
-		  let d = r[k];
-		  for (let j = i + d; ; j += d) {
-		      let q = board[j];
-
-		      if (("A" < q && q < "a") || q == " " || q == "\n") break;
-
-		      if (p == "P" && (d == -10 || d == -20) && q != ".") break;
-		      if (p == "P" && (d == -11 || d == -9)  && q == ".") break;
-		      if (p == "P" && d == -20 && (board[i - 10] != "." || i < 81)) break;
-
-		      moves.push({i, j, p, q});
-
-		      if (p == "P" || p == "N" || p == "K" || q != ".") break;
-		  }
-	      }
-	  }
-      }
-      return moves;
-  }
-
-  function domoveandflip(move) {
-      board = board.split("");
-
-      board[move.i] = ".";
-      board[move.j] = move.p;
-
-      if (move.p == "P" && move.j < 30) {
-	  board[move.j] = "Q";
-	  score += value["q"] - value["p"];
-      }
-
-      for (let i = 21; i < 99; i++) {
-	  if      ("A" > board[i]) continue;
-	  else if ("a" < board[i]) board[i] = board[i].toUpperCase();
-	  else                     board[i] = board[i].toLowerCase();
-      }
-
-      score = -score - value[move.q] - post[move.i] + post[move.j];
-
-      board = board.reverse().join("");
-  }
-
-  // https://en.wikipedia.org/wiki/Negamax#Negamax_with_alpha_beta_pruning
-  function _search(depth, a, b) {
-      let _a = a;
-
-      let e = table.get(board) || {};
-      if (e.depth >= depth) {
-	  if      (e.flag == "EXACT") return e.val;
-	  else if (e.flag == "LOWER") a = Math.max(a, e.val);
-	  else if (e.flag == "UPPER") b = Math.min(b, e.val);
-
-	  if (a >= b) return e.val;
-      }
-
-      if (depth < 1) return score;
-
-      let _board = board;
-      let _score = score;
-
-      let moves = gen().sort((m,n) => value[m.q] < value[n.q]);
-      let val = -Infinity;
-      let best = moves[0];
-      for (let move of moves) {
-	  domoveandflip(move);
-
-	  let t = -_search(depth - 1, -b, -a);
-	  if (t > val) {
-	      best = move;
-	      val = t;
-	      if (val > a) {
-		  a = val;
-	      }
-	  }
-
-	  score = _score;
-	  board = _board;
-
-	  if (a >= b) break;
-      }
-
-      e.val = val;
-      if      (val <= _a) e.flag = "UPPER";
-      else if (val >= b)  e.flag = "LOWER"
-      else                e.flag = "EXACT";
-      e.depth = depth;
-      e.move = best;
-
-      if (table.size > TABLE_SIZE) table.clear();
-      table.set(board, e);
-
-      return val;
-  }
-
-  function search() {
-      for (let depth = 1, t = Date.now(); Date.now() - t < SEARCH_TIME; depth++) {
-	  _search(depth, -Infinity, Infinity);
-      }
-      return table.get(board).move;
-  }
-
-  // integer to square AND square to integer
-  function i2s(i) {
-      return String.fromCharCode(96 + i % 10) + String.fromCharCode(58 - Math.floor(i / 10));
-  }
-  function s2i(s) {
-      return s.charCodeAt(0) - 96 - 10 * (s.charCodeAt(1) - 58);
-  }
-
-  // interactive board
-  div = document.querySelector("div");
-  canvas = document.querySelector("canvas");
-  ctx = canvas.getContext("2d");
-
-  s = 50;
-
-  canvas.width = canvas.height = 8 * s;
-  ctx.font = s + "px Arial";
-
-  sym = {K : "♔", Q : "♕", R : "♖", B : "♗", N : "♘", P : "♙",
-	 k : "♚", q : "♛", r : "♜", b : "♝", n : "♞", p : "♟",
-	 "." : ""};
-
-  function drawboard() {
-      for (let x = 0; x < 8; x++) {
-	  for (let y = 0; y < 8; y++) {
-	      let p = sym[board[(x + 1) + (y + 2) * 10]];
-	      ctx.fillStyle = (x + y) % 2 ? "lightblue" : "lightgrey"
-	      ctx.fillRect(x * s, y * s, s, s);
-	      ctx.fillStyle = "black";
-	      ctx.fillText(p, x * s + s / 7, y * s + s / 1.5);
-	  }
-      }
-  }
-
-  selected = false;
-  ply = 1;
-  x = y = -1;
-  canvas.addEventListener("mousedown", (event) => {
-      if (selected) {
-	  let i = 21 + Math.floor(      x / s) + 10 * Math.floor(      y / s);
-	  let j = 21 + Math.floor(event.x / s) + 10 * Math.floor(event.y / s);
-
-	  let mymove = {i, j, p : board[i], q : board[j]};
-	  if (gen().some(m => m.i == i && m.j == j)) {
-	      domoveandflip(mymove);
-	      cpmove = search();
-	      domoveandflip(cpmove);
-	      div.innerHTML += `${ply}. ${mymove.p}${i2s(mymove.j)} ${cpmove.p}${i2s(119 - cpmove.j)}<br>`;
-	      drawboard();
-	      ply++;
-	      if (mymove.q == "k" || cpmove.q == "k") alert("GAME OVER");
-	  } else {
-	      let t = div.innerHTML;
-	      div.innerHTML = "Illegal Move!";
-	      setTimeout(() => div.innerHTML = t, 500);
-	  }
-
-	  selected = false;
-      } else {
-	  x = event.x;
-	  y = event.y;
-	  selected = true;
-      }
-  });
-</script>
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>JavaScript Chess</title>
+  </head>
+  <body>
+    <canvas id="canvas"></canvas>
+    <script src="jchess.js"></script>
+  </body>
+</html>
